added sub jumbotron navbar plus file for about page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Ainara</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-  </head>
-  <body>
-    <h1>Hello out there!</h1>
-  </body>
+</head>
+
+<body>
+    
+
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+
+    <div class="jumbotron">
+        <ul class="header-subnav">
+            <li><a href="#">Work</a></li>
+            <li><a href="#" class="is-active">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+
+
+    <!-- <nav>
+        <button type="button" name="button">Andrea Ainara</button>
+        <button type="button" name="button">Work.</button>
+    </nav> -->
+
+
+
+
+
+
+</body>
+
 </html>
