landing page styled

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-    
+
 
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
 
-    <div class="jumbotron">
-        <ul class="header-subnav">
-            <li><a href="#">Work</a></li>
-            <li><a href="#" class="is-active">About</a></li>
-            <li><a href="#">Contact</a></li>
+    <div class="jumbotron" style="height:800px">
+        <ul class="header-subnav" style="top:45rem">
+            <li><a href="work.html">Work</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
