--- a/about.html
+++ b/about.html
@@ -1,11 +1,35 @@
-<div class="media-object stack-for-small">
-    <div class="media-object-section">
-        <div class="thumbnail">
-            <img src="http://s33.postimg.org/z8w5u7jzj/IMG_3128.jpg" class="my-img">
+<link rel="stylesheet" href="css/foundation.css">
+<link rel="stylesheet" href="css/app.css">
+
+<body>
+
+
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+
+    <div class="jumbotron">
+        <ul class="header-subnav">
+            <li><a href="work.html">Work</a></li>
+            <li><a href="about.html" class="is-active">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </div>
+
+
+    <div class="media-object stack-for-small">
+        <div class="media-object-section">
+            <!-- <div class="thumbnail">
+                <img src="http://s33.postimg.org/z8w5u7jzj/IMG_3128.jpg" class="my-img">
+            </div> -->
+        </div>
+        <div class="media-object-section">
+            <h4>Hello, world!</h4>
+            <p>My name is Andrea, and I'm a  Jr. Full-Stack Web Developer! I have a background in international business, with a passion for art, culture, and food.</p>
         </div>
     </div>
-    <div class="media-object-section">
-        <h4>Hello, world!</h4>
-        <p>My name is Andrea, and I'm a full-stack developer! I have a background in international business, with a passion for art, culture, and food.</p>
-    </div>
-</div>
+
+
+
+
+
+
+</body>
