--- a/work.html
+++ b/work.html
@@ -4,25 +4,45 @@
 <body>
 
 
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
 
-    <div class="jumbotron">
-        <ul class="header-subnav">
-            <li><a href="work.html" class="is-active">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+  <div class="jumbotron">
+      <ul class="header-subnav">
+          <li><a href="work.html" class="is-active">Work</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+      </ul>
+  </div>
+
+
+  <div class="row column">
+    <p class="lead">Trending Planetary Destinations</p>
+  </div>
+
+  <div class="row small-up-1 medium-up-2 large-up-3">
+    <div class="column">
+      <div class="callout small">
+        <p>Pegasi B</p>
+        <p><img src="http://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B" class="callout-img"></p>
+        <p class="lead">Copernican Revolution caused an uproar</p>
+        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      </div>
     </div>
-
-
-    <!-- <nav>
-        <button type="button" name="button">Andrea Ainara</button>
-        <button type="button" name="button">Work.</button>
-    </nav> -->
-
-
-
-
-
-
+    <div class="column">
+      <div class="callout small">
+        <p>Pegasi B</p>
+        <p><img src="http://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B" class="callout-img"></p>
+        <p class="lead">Copernican Revolution caused an uproar</p>
+        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="callout small">
+        <p>Pegasi B</p>
+        <p><img src="http://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B" class="callout-img"></p>
+        <p class="lead">Copernican Revolution caused an uproar</p>
+        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+      </div>
+    </div>
+  </div>
 </body>
