--- a/work.html
+++ b/work.html
@@ -22,26 +22,33 @@
   <div class="row small-up-1 medium-up-2 large-up-3">
     <div class="column">
       <div class="callout small">
-        <p>Pegasi B</p>
-        <p><img src="http://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B" class="callout-img"></p>
+        <p>Envision</p>
+        <p><img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fenvision-app.herokuapp.com" alt="image of a planet called Pegasi B" class="callout-img"></p>
+        <p class="lead"><strong><em>An online vision board builder, targeted towards people who suffer from mental illnesses as a productive way for them to focus on their lives outside of their illness.</em></strong></p>
+        <p class="subheader"><strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL<br>
+          <strong>Role: </strong>Lead/Sole Developer;<br>
+          <em>To try out the app:</em><br>
+          <strong>email: </strong>test@email.com<br>
+          <strong>password: </strong>123456<br>
+        </p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="callout small">
+        <p>CHORUS</p>
+        <p><img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fgentle-ocean-15832.herokuapp.com" alt="image of a planet called Pegasi B" class="callout-img"></p>
         <p class="lead">Copernican Revolution caused an uproar</p>
         <p class="subheader">Find Earth-like planets life outside the Solar System</p>
       </div>
     </div>
     <div class="column">
       <div class="callout small">
-        <p>Pegasi B</p>
-        <p><img src="http://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B" class="callout-img"></p>
-        <p class="lead">Copernican Revolution caused an uproar</p>
-        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
-      </div>
-    </div>
-    <div class="column">
-      <div class="callout small">
-        <p>Pegasi B</p>
-        <p><img src="http://placehold.it/400x370&text=Pegasi B" alt="image of a planet called Pegasi B" class="callout-img"></p>
-        <p class="lead">Copernican Revolution caused an uproar</p>
-        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+        <p>Book Exchange</p>
+        <p><img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fsalty-plateau-70214.herokuapp.com" alt="image of a planet called Pegasi B" class="callout-img"></p>
+        <p class="lead"><strong><em>A web app that allows people to propose book swaps on an open platform.</em></strong></p>
+        <p class="subheader"><strong>Tech Used: </strong>Javascript, jQuery, Node.js, Express, MongoDB, Mongoose<br>
+          <strong>Role: </strong>Lead/Sole Developer; As the sole developer on this project, I was in charge of building both the front-end client- and back-end server-sides of the application. This included, building the CRUD functions on the exchanges, building the Schemas and Controllers for Books and Exchanges, and tying all of the functionality together through seeded data.
+        </p>
       </div>
     </div>
   </div>
