--- a/work.html
+++ b/work.html
@@ -4,52 +4,131 @@
 <body>
 
 
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
 
-  <div class="jumbotron">
-      <ul class="header-subnav">
-          <li><a href="work.html" class="is-active">Work</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
-  </div>
-
-
-  <div class="row column">
-    <p class="lead">Trending Planetary Destinations</p>
-  </div>
-
-  <div class="row small-up-1 medium-up-2 large-up-3">
-    <div class="column">
-      <div class="callout small">
-        <p>Envision</p>
-        <p><img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fenvision-app.herokuapp.com" alt="image of a planet called Pegasi B" class="callout-img"></p>
-        <p class="lead"><strong><em>An online vision board builder, targeted towards people who suffer from mental illnesses as a productive way for them to focus on their lives outside of their illness.</em></strong></p>
-        <p class="subheader"><strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL<br>
-          <strong>Role: </strong>Lead/Sole Developer;<br>
-          <em>To try out the app:</em><br>
-          <strong>email: </strong>test@email.com<br>
-          <strong>password: </strong>123456<br>
-        </p>
-      </div>
+    <div class="jumbotron">
+        <ul class="header-subnav">
+            <li><a href="work.html" class="is-active">Work</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </div>
-    <div class="column">
-      <div class="callout small">
-        <p>CHORUS</p>
-        <p><img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fgentle-ocean-15832.herokuapp.com" alt="image of a planet called Pegasi B" class="callout-img"></p>
-        <p class="lead">Copernican Revolution caused an uproar</p>
-        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
-      </div>
-    </div>
-    <div class="column">
-      <div class="callout small">
-        <p>Book Exchange</p>
-        <p><img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fsalty-plateau-70214.herokuapp.com" alt="image of a planet called Pegasi B" class="callout-img"></p>
-        <p class="lead"><strong><em>A web app that allows people to propose book swaps on an open platform.</em></strong></p>
-        <p class="subheader"><strong>Tech Used: </strong>Javascript, jQuery, Node.js, Express, MongoDB, Mongoose<br>
-          <strong>Role: </strong>Lead/Sole Developer; As the sole developer on this project, I was in charge of building both the front-end client- and back-end server-sides of the application. This included, building the CRUD functions on the exchanges, building the Schemas and Controllers for Books and Exchanges, and tying all of the functionality together through seeded data.
-        </p>
-      </div>
-    </div>
-  </div>
-</body>
+
+    <table class="row" dir="rtl">
+        <tr>
+
+            <td class="wrapper" dir="ltr">
+
+                <table class="four columns">
+                    <tr>
+                        <td class="center" align="center">
+                            <center>
+                                <img class="center" src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fenvision-app.herokuapp.com" width="365" height="250" alt="Majestic Kitty" />
+                            </center>
+                        </td>
+                        <td class="expander"></td>
+                    </tr>
+                </table>
+
+            </td>
+
+            <td class="wrapper last" dir="ltr">
+
+                <table class="eight columns">
+                    <tr>
+                        <td>
+                            <p class="lead"><strong><em>An online vision board builder, targeted towards people who suffer from mental illnesses as a productive way for them to focus on their lives outside of their illness.</em></strong></p>
+                            <p class="subheader"><strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL
+                                <br>
+                                <strong>Role: </strong>Lead/Sole Developer;
+                                <br>
+                                <em>To try out the app:</em>
+                                <br>
+                                <strong>email: </strong>test@email.com
+                                <br>
+                                <strong>password: </strong>123456
+                                <br>
+                            </p>
+                        </td>
+                        <td class="expander"></td>
+                    </tr>
+                </table>
+
+            </td>
+
+        </tr>
+    </table>
+
+    <hr/>
+    <table class="row">
+        <tr>
+
+            <td class="wrapper" dir="rtl">
+
+                <table class="four columns">
+                    <tr>
+                        <td class="center" align="center">
+                            <center>
+                                <img class="center" src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fgentle-ocean-15832.herokuapp.com" width="365" height="250" alt="Majestic Kitty" />
+                            </center>
+                        </td>
+                        <td class="expander"></td>
+                    </tr>
+                </table>
+
+            </td>
+
+            <td class="wrapper last" dir="rtl">
+
+                <table class="eight columns">
+                    <tr>
+                        <td>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ipsa obcaecati iusto consequatur laudantium voluptas odio! Iure at aliquid pariatur sapiente sint, et facilis ipsa, maiores deleniti, minima perspiciatis sed.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa voluptatem ipsam quae nostrum. Dicta hic, cum similique quas perferendis excepturi, autem earum iste, sint vero quae rem dolorum illo quaerat.</p>
+                        </td>
+                        <td class="expander"></td>
+                    </tr>
+                </table>
+
+            </td>
+
+        </tr>
+
+        <hr/>
+        <table class="row">
+            <tr>
+                <td class="wrapper" dir="ltr">
+
+                    <table class="four columns">
+                        <tr>
+                            <td class="center" align="center">
+                                <center>
+                                    <img class="center" src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fsalty-plateau-70214.herokuapp.com" width="365" height="250" alt="Majestic Kitty" />
+                                </center>
+                            </td>
+                            <td class="expander"></td>
+                        </tr>
+                    </table>
+
+                </td>
+
+                <td class="wrapper last" dir="ltr">
+
+                    <table class="eight columns">
+                        <tr>
+                            <td>
+                                <p class="lead"><strong><em>A web app that allows people to propose book swaps on an open platform.</em></strong></p>
+                                <p class="subheader"><strong>Tech Used: </strong>Javascript, jQuery, Node.js, Express, MongoDB, Mongoose
+                                    <br>
+                                    <strong>Role: </strong>Lead/Sole Developer; As the sole developer on this project, I was in charge of building both the front-end client- and back-end server-sides of the application. This included, building the CRUD
+                                    functions on the exchanges, building the Schemas and Controllers for Books and Exchanges, and tying all of the functionality together through seeded data.
+                                </p>
+                            </td>
+                            <td class="expander"></td>
+                        </tr>
+                    </table>
+
+                </td>
+
+            </tr>
+        </table>
