--- a/index.html
+++ b/index.html
@@ -18,15 +18,133 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
 
     <div class="jumbotron" style="height:800px">
-        <ul class="header-subnav" style="top:45rem">
-            <li><a href="work.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+        <ul class="header-subnav" style="top:30rem">
+            <li><a href="#projects">Work</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
 
+    <div id="projects">
+        <h2>Projects</h2>
+        <div class="row">
+            <div class="medium-3 columns">
+                <div class="card">
+                    <div class="image">
+                        <img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fenvision-app.herokuapp.com" width="400">
+                        <span class="title">Envision</span>
+                    </div>
+                    <div class="content">
+                        <p><em>An online vision board builder, targeted towards people who suffer from mental illnesses as a productive way for them to focus on their lives outside of their illness.</em></br>
+                            <br>
+                            <strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL
+                            <br>
+                            <strong>Role: </strong>Lead/Sole Developer
+                            <br>
+                            <br>
+                            <em>To try out the app:</em>
+                            <br>
+                            <strong>email: </strong>test@email.com
+                            <br>
+                            <strong>password: </strong>123456
+                            <br>
+                        </p>
+                    </div>
+                    <div class="action">
+                        <a href='http://evision-app.herokuapp.com'>Website</a>
+                    </div>
+                </div>
+            </div>
 
-  <iron-component-page></iron-component-page>
+
+            <div class="row">
+                <div class="medium-3 columns">
+                    <div class="card">
+                        <div class="image">
+                            <img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fgentle-ocean-15832.herokuapp.com" width="408">
+                            <span class="title">CHOR-US</span>
+                        </div>
+                        <div class="content">
+                            <p><em>An app for roommates to keep track of their chores within their respective households.</em></br>
+                                <br>
+                                <strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL
+                                <br>
+                                <strong>Role: </strong>In this group project, I was involved mostly with building some of the CRUD on the chores, developing the users CRUD, and in charge of adding front- and back-end authentication and authorization.
+                                <br>
+                                <br>
+                                <em>To try out the app:</em>
+                                <br>
+                                <strong>email: </strong>j0@gmail.com
+                                <br>
+                                <strong>password: </strong>a
+                                <br>
+                            </p>
+                        </div>
+                        <div class="action">
+                            <a href='https://gentle-ocean-15832.herokuapp.com/'>Website</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="medium-3 columns end">
+                        <div class="card">
+                            <div class="image">
+                                <img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fsalty-plateau-70214.herokuapp.com" width="415">
+                                <span class="title">Book Exchange</span>
+                            </div>
+                            <div class="content">
+                                <p><em>A web app that allows people to propose book swaps on an open platform.</em></br>
+                                    <br>
+                                    <strong>Tech Used: </strong>Javascript, jQuery, Node.js, Express, MongoDB, Mongoose
+                                    <br>
+                                    <strong>Role: </strong>Lead/Sole Developer
+                                    <br>
+                                    <br>
+                                    <em>To try out the app:</em>
+                                    <p>Simply go to the website, share with friends, and enjoy!</p>
+                                    <br>
+                                </p>
+                            </div>
+                            <div class="action">
+                                <a href='https://salty-plateau-70214.herokuapp.com/'>Website</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+        <div id="about">
+            <h3>Hello, world. I'm Andrea!</h3>
+            <p>My name is Andrea, and I'm a Jr. Full-Stack Web Developer! I have a background in international business, with a passion for art, culture, and food.</p>
+        </div>
+
+        <div id="contact">
+            <div class="row">
+                <div class="medium-3 columns">
+                    <a href="andrea.ainara10@gmail.com" class="icon-button mail">
+                        <i class="fi-mail"></i><span></span>
+                    </a>
+                    <a href="https://www.linkedin.com/in/andreaceballos" class="icon-button linkedin">
+                        <i class="fi-social-linkedin"></i><span></span>
+                    </a>
+                    <a href="https://github.com/andreaainara" class="icon-button github">
+                        <i class="fi-social-github"></i><span></span>
+                    </a>
+                    <a href="https://twitter.com/andrea_ainara" class="icon-button twitter">
+                      <i class="fi-social-twitter"></i><span></span>
+                    </a>
+                    <a href="https://www.facebook.com/andrea.ainara" class="icon-button facebook">
+                      <i class="fi-social-facebook"></i><span></span>
+                    </a>
+                </div>
+            </div>
+
+        </div>
 
 
 
