more fleshed out about sections, added pdf link, getting ready for final deploy

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
 
-    <div class="jumbotron" style="height:800px">
-        <ul class="header-subnav" style="top:30rem">
+    <div class="jumbotron">
+        <ul class="header-subnav">
             <li><a href="#projects">Work</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -26,7 +26,7 @@
     </div>
 
     <div id="projects">
-        <h2>Projects</h2>
+        <center><h3>Projects</h3><center>
         <div class="row">
             <div class="medium-3 columns">
                 <div class="card">
@@ -37,7 +37,7 @@
                     <div class="content">
                         <p><em>An online vision board builder, targeted towards people who suffer from mental illnesses as a productive way for them to focus on their lives outside of their illness.</em></br>
                             <br>
-                            <strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL
+                            <strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL</br>
                             <br>
                             <strong>Role: </strong>Lead/Sole Developer
                             <br>
@@ -52,6 +52,7 @@
                     </div>
                     <div class="action">
                         <a href='http://evision-app.herokuapp.com'>Website</a>
+                        <a href='https://github.com/andreaainara/Envision'>GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -67,9 +68,9 @@
                         <div class="content">
                             <p><em>An app for roommates to keep track of their chores within their respective households.</em></br>
                                 <br>
-                                <strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL
+                                <strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL</br>
                                 <br>
-                                <strong>Role: </strong>In this group project, I was involved mostly with building some of the CRUD on the chores, developing the users CRUD, and in charge of adding front- and back-end authentication and authorization.
+                                <strong>Role: </strong>In this group project, I worked on CRUD and was in charge of adding front- and back-end authentication and authorization.
                                 <br>
                                 <br>
                                 <em>To try out the app:</em>
@@ -82,6 +83,7 @@
                         </div>
                         <div class="action">
                             <a href='https://gentle-ocean-15832.herokuapp.com/'>Website</a>
+                            <a href='https://github.com/altonelli/chorus'>GitHub Repo</a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +99,7 @@
                             <div class="content">
                                 <p><em>A web app that allows people to propose book swaps on an open platform.</em></br>
                                     <br>
-                                    <strong>Tech Used: </strong>Javascript, jQuery, Node.js, Express, MongoDB, Mongoose
+                                    <strong>Tech Used: </strong>Javascript, jQuery, Node.js, Express, MongoDB, Mongoose</br>
                                     <br>
                                     <strong>Role: </strong>Lead/Sole Developer
                                     <br>
@@ -109,6 +111,7 @@
                             </div>
                             <div class="action">
                                 <a href='https://salty-plateau-70214.herokuapp.com/'>Website</a>
+                                <a href='https://github.com/andreaainara/book-exchange-project01'>GitHub Repo</a>
                             </div>
                         </div>
                     </div>
@@ -117,30 +120,83 @@
                 </div>
             </div>
         </div>
-
+        <br>
+        <hr class="section-heading-spacer">
+        <br>
         <div id="about">
-            <h3>Hello, world. I'm Andrea!</h3>
-            <p>My name is Andrea, and I'm a Jr. Full-Stack Web Developer! I have a background in international business, with a passion for art, culture, and food.</p>
+            <center>
+                <h3>Hello, world. I'm Andrea!</h3>
+            </center>
+
+            <table class="row" dir="rtl">
+                <tr>
+
+                    <td class="wrapper" dir="ltr">
+
+                        <table class="four columns">
+                            <tr>
+                                <td class="center" align="center">
+                                    <center>
+                                        <img class="center" src="https://s31.postimg.org/qny91biu3/IMG_3129.jpg" width="260" height="290" alt="Majestic Kitty" />
+                                    </center>
+                                </td>
+                                <td class="expander"></td>
+                            </tr>
+                        </table>
+
+                    </td>
+
+                    <td class="wrapper last" dir="ltr">
+
+                        <table class="eight columns">
+                            <tr>
+                                <td>
+                                    <p>I'm a Jr. Full-Stack Web Developer! I have a background in international business with a focus on marketing and branding, with a passion for art, culture, and food.</p>
+                                    <p> My goal in web development is to help bring ideas to life via code. I love working with others to make things happen; creating things and getting them to work are what make this field so rewarding.
+                                        <br>In my spare time, I love to read, make art, and play/watch basketball and soccer. I also love going to and watching baseball games (I'm a Giants baby).
+                                        <br>I still have a lot to learn, but that's what makes this field so rewarding. Let's build things!
+                                    </p>
+                                </td>
+                                <td class="expander"></td>
+                            </tr>
+                        </table>
+
+                    </td>
+
+                </tr>
+            </table>
+
+
+
         </div>
+
+
+        <hr class="section-heading-spacer">
 
         <div id="contact">
             <div class="row">
-                <div class="medium-3 columns">
-                    <a href="andrea.ainara10@gmail.com" class="icon-button mail">
-                        <i class="fi-mail"></i><span></span>
-                    </a>
-                    <a href="https://www.linkedin.com/in/andreaceballos" class="icon-button linkedin">
-                        <i class="fi-social-linkedin"></i><span></span>
-                    </a>
-                    <a href="https://github.com/andreaainara" class="icon-button github">
-                        <i class="fi-social-github"></i><span></span>
-                    </a>
-                    <a href="https://twitter.com/andrea_ainara" class="icon-button twitter">
-                      <i class="fi-social-twitter"></i><span></span>
-                    </a>
-                    <a href="https://www.facebook.com/andrea.ainara" class="icon-button facebook">
-                      <i class="fi-social-facebook"></i><span></span>
-                    </a>
+                <div class="medium-5 columns">
+                    <center>
+                        <h3>Let's Get In Touch</h3>
+                        <a href="mailto:andrea.ainara10@gmail.com" class="icon-button mail">
+                            <i class="fi-mail"></i><span></span>
+                        </a>
+                        <a href="https://www.linkedin.com/in/andreaceballos" class="icon-button linkedin">
+                            <i class="fi-social-linkedin"></i><span></span>
+                        </a>
+                        <a href="https://github.com/andreaainara" class="icon-button github">
+                            <i class="fi-social-github"></i><span></span>
+                        </a>
+                        <a href="https://twitter.com/andrea_ainara" class="icon-button twitter">
+                            <i class="fi-social-twitter"></i><span></span>
+                        </a>
+                        <a href="https://www.facebook.com/andrea.ainara" class="icon-button facebook">
+                            <i class="fi-social-facebook"></i><span></span>
+                        </a>
+                        <a href="https://docs.google.com/document/d/1fHCVIOUkblSgaCf0tPxtTDvWfOvqxAtAch1bGab8dD4/view" class="icon-button page">
+                            <i class="fi-page"></i><span></span>
+                        </a>
+                    </center>
                 </div>
             </div>
 
