fixed site link for envision and removed facebook and twitter from contact

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </p>
                     </div>
                     <div class="action">
-                        <a href='http://evision-app.herokuapp.com'>Website</a>
+                        <a href='https://envision-app.herokuapp.com/'>Website</a>
                         <a href='https://github.com/andreaainara/Envision'>GitHub Repo</a>
                     </div>
                 </div>
@@ -190,12 +190,6 @@
                         </a>
                         <a href="https://docs.google.com/document/d/1fHCVIOUkblSgaCf0tPxtTDvWfOvqxAtAch1bGab8dD4/view" class="icon-button page">
                           <i class="fi-page"></i><span></span>
-                        </a>
-                        <a href="https://www.facebook.com/andrea.ainara" class="icon-button facebook">
-                            <i class="fi-social-facebook"></i><span></span>
-                        </a>
-                        <a href="https://twitter.com/andrea_ainara" class="icon-button twitter">
-                          <i class="fi-social-twitter"></i><span></span>
                         </a>
                     </center>
                 </div>
