--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                         <table class="eight columns">
                             <tr>
                                 <td>
-                                    <p>I'm a Jr. Full-Stack Web Developer! I have a background in international business with a focus on marketing and branding, with a passion for art, culture, and food.</p>
-                                    <p> My goal in web development is to help bring ideas to life via code. I love working with others to make things happen; creating things and getting them to work are what make this field so rewarding.
-                                        <br>In my spare time, I love to read, make art, and play/watch basketball and soccer. I also love going to and watching baseball games (I'm a Giants baby).
+                                    <p>I'm a Jr. Full-Stack Web Developer with a background in international business and a focus on marketing and branding.</p>
+                                    <p> My goal in web development is to help build helpful and innovative products. I love working with others to make things happen.
+                                        <br>In my spare time, I love to read, make art, and play/watch basketball and soccer.
                                         <br>I still have a lot to learn, but that's what makes this field so rewarding. Let's build things!
                                     </p>
                                 </td>
