changed the format of the titles on project cards

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
                 <div class="card">
                     <div class="image">
                         <img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fenvision-app.herokuapp.com" width="400">
-                        <span class="title">Envision</span>
+
                     </div>
                     <div class="content">
+                      <p><strong>Envision</strong></p>
                         <p><em>An online vision board builder, targeted towards people who suffer from mental illnesses as a productive way for them to focus on their lives outside of their illness.</em></br>
                             <br>
                             <strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL</br>
@@ -66,6 +67,7 @@
                             <span class="title">CHOR-US</span>
                         </div>
                         <div class="content">
+                          <p><strong>CHÖRUS</strong></p>
                             <p><em>An app for roommates to keep track of their chores within their respective households.</em></br>
                                 <br>
                                 <strong>Tech Used: </strong>Ruby on Rails, HTML/CSS, PostgreSQL</br>
@@ -94,9 +96,10 @@
                         <div class="card">
                             <div class="image">
                                 <img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fsalty-plateau-70214.herokuapp.com" width="415">
-                                <span class="title">Book Exchange</span>
+
                             </div>
                             <div class="content">
+                              <p><strong>Book Exchange</strong></p>
                                 <p><em>A web app that allows people to propose book swaps on an open platform.</em></br>
                                     <br>
                                     <strong>Tech Used: </strong>Javascript, jQuery, Node.js, Express, MongoDB, Mongoose</br>
