had to redo the website screenshots

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="medium-3 columns">
                 <div class="card">
                     <div class="image">
-                        <img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fenvision-app.herokuapp.com" width="400">
+                        <img src="http://www.thumboo.com/demo/full.html?url=https://envision-app.herokuapp.com" width="400">
 
                     </div>
                     <div class="content">
@@ -63,8 +63,8 @@
                 <div class="medium-3 columns">
                     <div class="card">
                         <div class="image">
-                            <img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fgentle-ocean-15832.herokuapp.com" width="408">
-                            
+                            <img src="http://www.thumboo.com/demo/full.html?url=https://gentle-ocean-15832.herokuapp.com" width="408">
+
                         </div>
                         <div class="content">
                           <p><strong>CHÖRUS</strong></p>
@@ -95,7 +95,7 @@
                     <div class="medium-3 columns end">
                         <div class="card">
                             <div class="image">
-                                <img src="http://shrinktheweb.snapito.io/v2/webshot/spu-ea68c8-ogi2-3cwn3bmfojjlb56e?size=800x0&screen=1024x768&url=http%3A%2F%2Fsalty-plateau-70214.herokuapp.com" width="415">
+                                <img src="http://www.thumboo.com/demo/full.html?url=https://salty-plateau-70214.herokuapp.com" width="415">
 
                             </div>
                             <div class="content">
