redid website images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="medium-3 columns">
                 <div class="card">
                     <div class="image">
-                        <img src="http://www.thumboo.com/demo/full.html?url=https://envision-app.herokuapp.com" width="400">
+                        <img src="https://s24.postimg.org/oiu4v5139/Envision_SS.jpg" width="400">
 
                     </div>
                     <div class="content">
@@ -63,7 +63,7 @@
                 <div class="medium-3 columns">
                     <div class="card">
                         <div class="image">
-                            <img src="http://www.thumboo.com/demo/full.html?url=https://gentle-ocean-15832.herokuapp.com" width="408">
+                            <img src="https://s30.postimg.org/56nryf8mp/CHORUS.jpg" width="408">
 
                         </div>
                         <div class="content">
@@ -95,7 +95,7 @@
                     <div class="medium-3 columns end">
                         <div class="card">
                             <div class="image">
-                                <img src="http://www.thumboo.com/demo/full.html?url=https://salty-plateau-70214.herokuapp.com" width="415">
+                                <img src="https://s30.postimg.org/5mwtbbn75/Booke_Exchange.jpg" width="415">
 
                             </div>
                             <div class="content">
