updated link to resume

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <a href="https://github.com/andreaainara" class="icon-button github">
                             <i class="fi-social-github"></i><span></span>
                         </a>
-                        <a href="https://docs.google.com/document/d/1fHCVIOUkblSgaCf0tPxtTDvWfOvqxAtAch1bGab8dD4/view" class="icon-button page">
+                        <a href="https://drive.google.com/file/d/0B6YR1tyjgiVJbm5kUTc4RzBpM2M/view?usp=sharing" class="icon-button page">
                           <i class="fi-page"></i><span></span>
                         </a>
                     </center>
