--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <tr>
                                 <td>
                                     <p>I'm a Jr. Full-Stack Web Developer with a background in international business and a focus on marketing and branding.</p>
-                                    <p> My goal in web development is to help build helpful and innovative products. I love working with others to make things happen.
+                                    <p> My goal in web development is to build products that make a difference. I love working with others to make things happen.
                                         <br>In my spare time, I love to read, make art, and play/watch basketball and soccer.
                                         <br>I still have a lot to learn, but that's what makes this field so rewarding. Let's build things!
                                     </p>
